# zstd-sys-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
src/: lib.rs  safe.rs
zstd-local/: howto_build.md
