[package]
name = "zstd-sys-rs"
version = "1.5.11"
edition = "2021"
license = "BSD-3-Clause"
description = "Rust bindings to statically linked zstd v1.5.7, with a safe zero-copy (de)compress API"
repository = "https://github.com/Ignalina/zstd-sys-rs"
build = "build.rs"
include = [
    "src/**",
    "zstd/lib/**",
    "zstd/lib/common/**",
    "zstd/lib/compress/**",
    "zstd/lib/decompress/**",
    "zstd/lib/deprecated/**",
    "zstd/lib/dictBuilder/**",
    "build.rs",
    "wrapper.h",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "zstd.license"
]


[build-dependencies]
cc = "1.2.30"
bindgen = "0.72.0"
glob = "0.3"


[dependencies]
libc = "0.2"

[package.metadata]
# Optional, for clarity in documentation.
zstd-version = "1.5.7"

[lib]
name = "zstd_sys_rs"
path = "src/lib.rs"
# bindgen copies libzstd's C doc-comments verbatim; they contain C snippets that
# are not valid Rust doctests, so don't run them as such.
doctest = false


